--- a/trunk/NetworkEditor/CHANGES
+++ b/trunk/NetworkEditor/CHANGES
@@ -4,6 +4,7 @@
  * Fix: spinboxes on controlsenders sent step values instead the actual value
  * Configurators: Support for negative floating point numbers
  * Configurators: increased precission from 2 to now 5 decimals
+ * .pos files for processing boxes positions deprecated.
 
 
 2008-08-11 NetworkEditor 1.3.0
