--- a/trunk/CLAM/debian/changelog
+++ b/trunk/CLAM/debian/changelog
@@ -1,3 +1,12 @@
+clam (1.3.1~svn12519-1) unstable; urgency=low
+
+  * New upstream release.
+  * Not built as a native package anymore.
+  * Examples and doxygen are not tarballed but provided as independent files.
+  * Setting the distribution to unstable.
+
+ -- CLAM Team <clam@iua.upf.edu>  Tue, 23 Dec 2008 09:09:56 +0100
+
 clam (1.3.0-1) unstable; urgency=low
 
   * New upstream release
@@ -32,7 +41,7 @@ clam (1.3.0-1) unstable; urgency=low
   * debian/control: removed hard version dependency from the examples
     packages to the binary ones to enable binary Non-Maintainer-Updates.
 
- -- CLAM Team <clam@iua.upf.edu>  Mon, 11 Aug 2008 14:23:54 +0100
+ -- CLAM Team <clam@iua.upf.edu>  Tue, 23 Dec 2008 09:08:27 +0100
 
 clam (1.1.1~svn11102-1) unstable; urgency=low
 
