--- a/trunk/Annotator/resources/man/man1/Annotator.1
+++ b/trunk/Annotator/resources/man/man1/Annotator.1
@@ -1,4 +1,4 @@
-.TH Annotator 1 "August 24, 2005" "version 0.3.0" "MISCELLANEOUS"
+.TH ANNOTATOR 1 "August 24, 2005" "version 0.3.0" "User Commands"
 .SH NAME
 Annotator \- CLAM Music Annotator
 .SH SYNOPSIS
