--- a/Annotator/resources/man/man1/ClamExtractorExample.1
+++ b/Annotator/resources/man/man1/ClamExtractorExample.1
@@ -1,4 +1,4 @@
-.TH ClamExtractorExample 1 "August 24, 2005" "version 0.3.0" "MISCELLANEOUS"
+.TH CLAMEXTRACTOREXAMPLE 1 "August 24, 2005" "version 0.3.0" "User Commands"
 .SH NAME
 ClamExtractorExample \- Extracts music features from audio
 .SH SYNOPSIS
@@ -39,4 +39,4 @@ Generate the project and the schema using .beats as suffix and generating all th
 .SH AUTHOR
 CLAM development team (clam (at) iua.upf.es)
 .SH SEE ALSO
-Annotator(1)
+Annotator(1), OnsetExtractor(1)
