* Added ChordExtractor manpage and reference from the others

--- a/Annotator/resources/man/man1/Annotator.1
+++ b/Annotator/resources/man/man1/Annotator.1
@@ -9,4 +9,4 @@ music files.
 .SH AUTHOR
 CLAM development team (clam (at) iua.upf.es)
 .SH SEE ALSO
-ClamExtractorExample(1)
+ClamExtractorExample(1), OnsetExtractor(1), ChordExtractor(1)
