--- a/trunk/CLAM/CHANGES
+++ b/trunk/CLAM/CHANGES
@@ -9,7 +9,7 @@
 
 2008-08-11 CLAM 1.3.0
 'Shooting flying plugins release'
- * SVN Revision: 11960
+ * SVN Revision: 11960.
  * Integrates first wave of GSoC 2008 contributions from the students
    Natanael Olaiz, Wang Jun, Pawel Bartkiewicz, Francisco Tufro,
    and Yushen Han.
