--- a/trunk/Chordata/CHANGES
+++ b/trunk/Chordata/CHANGES
@@ -1,5 +1,5 @@
-2008-07-?? Turnaround 1.0.0 SVN $Revision: 11172 $
-'The Birth'
+2009-01-?? Chordata 1.0.0 SVN $Revision: 11172 $
+'Embrio release'
  * First working version
  * Loading song in mp3, ogg, wavs...
  * Offline chord analysis
