--- a/trunk/Chordata/resources/man/man1/chordata.1
+++ b/trunk/Chordata/resources/man/man1/chordata.1
@@ -1,11 +1,11 @@
-.TH Turnaround 1 "August 24, 2005" "version 0.3.0" "MISCELLANEOUS"
+.TH chordata 1 "August 24, 2005" "version 0.3.0" "MISCELLANEOUS"
 .SH NAME
-Turnaround \- Analyzes chords on audio files
+chordata \- Analyzes chords on audio files
 .SH SYNOPSIS
-.B Turnaround <wavefile>
+.B chordata
 .SH DESCRIPTION
 .PP
-CLAM Turnaround is a chord detection tool that can be used to
+CLAM Chordata is a chord detection tool that can be used to
 browse the chords of your favourite mp3/ogg/wav music.
 You can freely move arround the song, listening and 
 getting insight of its tonal features by using several
@@ -16,5 +16,4 @@ This is an example application of the CLAM framework.
 
 .SH AUTHOR
 CLAM development team (clam (at) iua.upf.es)
-.SH SEE ALSO
-Turnaround(1)
+
