* DelayWetDry added just as an specialization of TimeDelay   It's a TimeDelay with a wet/dry control.

--- a/CLAM/plugins/GuitarEffects/TimeDelay/README
+++ b/CLAM/plugins/GuitarEffects/TimeDelay/README
@@ -1,6 +1,7 @@
 == Description ==
 
-Delay: useful for adjusting the time, for example for synchronization of two sources.
+TimeDelay: useful for adjusting the time, for example for synchronization of two sources.
+DelayWetDry: time delay with a wet/dry control
 
 == Install ==
 
