--- a/CLAM/INSTALL
+++ b/CLAM/INSTALL
@@ -3,11 +3,11 @@ applications from the source tarballs or a subversion checkous.
 Alternatively, CLAM website provides already compiled packages for several 
 platforms.
 
-http://clam.iua.upf.edu/download.html
+http://clam-project.org/download.html
 
 Checkout the subversion repository
 
-	$ svn co http://iua-share.upf.edu/svn/clam/trunk clam
+	$ svn co http://clam-project.org/clam/trunk clam
 
  1. Install CLAM dependencies
 
@@ -112,7 +112,7 @@ If you are a Ubuntu 8.04 (Hardy) user you can enable the hardy-backports reposit
 
 Build instructions for CLAM in Mac OSX are currently in this wiki:
 
-http://iua-share.upf.edu/wikis/clam/index.php/Devel/Mac_OSX_build
+http://clam-project.org/wiki/Devel/Mac_OSX_build
 
 
 
@@ -121,8 +121,8 @@ http://iua-share.upf.edu/wikis/clam/index.php/Devel/Mac_OSX_build
 See instructions on the wiki for native compilation with MinGW 
 or cross compilation from Linux
 
- http://www.clam.iua.upf.edu/wikis/clam/index.php/Devel/Windows_MinGW_build
- http://www.clam.iua.upf.edu/wikis/clam/index.php/Devel/Windows_MinGW_cross_compile
+ http://www.clam-project.org/wiki/Devel/Windows_MinGW_build
+ http://www.clam-project.org/wiki/Devel/Windows_MinGW_cross_compile
 
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  
