--- a/trunk/CLAM/pyclam/INSTALL
+++ b/trunk/CLAM/pyclam/INSTALL
@@ -39,7 +39,7 @@ After those steps you should get the clam.so ready to use.
 Pass the automatic tests
 
 First, checkout the clam test-data repository:
-$ svn co https://iua-share.upf.edu/svn/clam-test-data/trunk clam-test-data
+$ svn co http://clam-project.org/clam_data/trunk clam-test-data
 
 Change dir to CLAM/pyclam/test and configure it with scons providing the following option (no compiling nor installation step is needed):
 
