* chordata/CHANGES: project name renamed to chordata in lowercase

--- a/chordata/CHANGES
+++ b/chordata/CHANGES
@@ -1,4 +1,4 @@
-2009-01-?? Chordata 1.0.0 SVN $Revision: 11172 $
+2009-01-?? chordata 1.0.0 SVN $Revision: 11172 $
 'Embrio release'
  * First working version
  * Loading song in mp3, ogg, wavs...
