--- a/trunk/packaging/CLAM/debian/changelog
+++ b/trunk/packaging/CLAM/debian/changelog
@@ -1,3 +1,21 @@
+clam (1.3.1~svn12271) unstable; urgency=low
+
+  * CLAM/debian/libclam-doc.examples: avoiding duplicate examples/examples dir
+  * CLAM/debian/rules: not tarbalizing doxygen and examples
+  * CLAM/debian/rules: removed traces of plugin installation which is in a
+    different src package now
+  * CLAM/debian/libclam-doc.examples/docs: Doxygen is docs while examples are
+    examples
+  * CLAM/debian/libclam-doc.examples/docs: Taking folders instead of the
+    tarballs
+  * CLAM/debian/changelog: updated.
+  * CLAM/debian/control: not depending on libxerces28-dev as this makes lintian
+    complain even being one of many alternatives
+  * Updated the new website to http://clam-project.org
+  * debian specific files moved to a different svn branch
+
+ -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:45:40 +0100
+
 clam (1.3.1~svn12519-1) unstable; urgency=low
 
   * New upstream release.
