--- a/trunk/packaging/chordata/debian/changelog
+++ b/trunk/packaging/chordata/debian/changelog
@@ -1,3 +1,10 @@
+clam-chordata (0.9.0-1ubuntu1) unstable; urgency=low
+
+  * Updated the new website to http://clam-project.org
+  * debian specific files moved to a different svn branch
+
+ -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:43:53 +0100
+
 clam-chordata (0.9.0-1) unstable; urgency=low
 
   * New uptream release
