--- a/trunk/packaging/plugins/debian/changelog
+++ b/trunk/packaging/plugins/debian/changelog
@@ -1,3 +1,10 @@
+clam-plugins (1.3.0-1) unstable; urgency=low
+
+  * Updated the new website to http://clam-project.org
+  * debian specific files moved to a different svn branch
+
+ -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:44:36 +0100
+
 clam-plugins (1.1.0-1) unstable; urgency=low
 
   * First package
