--- a/packaging/NetworkEditor/debian/changelog
+++ b/packaging/NetworkEditor/debian/changelog
@@ -1,3 +1,10 @@
+clam-networkeditor (1.3.0-1) unstable; urgency=low
+
+  * Updated the new website to http://clam-project.org
+  * debian specific files moved to a different svn branch
+
+ -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:37:44 +0100
+
 clam-networkeditor (0.4.3-1) unstable; urgency=low
 
   * Upstream release
