* Annotator/debian/control added python dependency

--- a/packaging/Annotator/debian/changelog
+++ b/packaging/Annotator/debian/changelog
@@ -2,6 +2,7 @@ clam-annotator (0.4.0-1) unstable; urgency=low
 
   * Updated the new website to http://clam-project.org
   * debian specific files moved to a different svn branch
+  * Added python dependency for helper scripts
 
  -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:31:09 +0100
 
