--- a/trunk/NetworkEditor/debian/changelog
+++ b/trunk/NetworkEditor/debian/changelog
@@ -1,7 +1,8 @@
-clam-networkeditor (1.3.0-1) unstable; urgency=low
+clam-networkeditor (1.3.1~svn12860-1) unstable; urgency=low
 
   * Updated the new website to http://clam-project.org
-  * debian specific files moved to a different svn branch
+  * debian specific files not part of upstream tarball
+  * Added David García Garzón as Uploader
 
  -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:37:44 +0100
 
