--- a/CLAM/debian/changelog
+++ b/CLAM/debian/changelog
@@ -1,4 +1,4 @@
-clam (1.3.1~svn12271) unstable; urgency=low
+clam (1.3.1~svn12860-1) unstable; urgency=low
 
   * CLAM/debian/libclam-doc.examples: avoiding duplicate examples/examples dir
   * CLAM/debian/rules: not tarbalizing doxygen and examples
@@ -12,7 +12,8 @@ clam (1.3.1~svn12271) unstable; urgency=low
   * CLAM/debian/control: not depending on libxerces28-dev as this makes lintian
     complain even being one of many alternatives
   * Updated the new website to http://clam-project.org
-  * debian specific files moved to a different svn branch
+  * debian specific files not part of upstream tarball
+  * Added David García Garzón as Uploader
 
  -- CLAM Team <developers@clam-project.org>  Wed, 04 Mar 2009 21:45:40 +0100
 
