--- a/CLAM/plugins/debian/changelog
+++ b/CLAM/plugins/debian/changelog
@@ -1,10 +1,10 @@
-clam-plugins (1.3.1~svn12850-1) unstable; urgency=low
+clam-plugins (1.3.1~svn12860-1) unstable; urgency=low
 
   * Excluded TestAudioDatabaseReader binary: is a test binary
   * Excluded EbowSynthesizer binary: old version for 
     ContinuousExcitationSynthesizer
   * Man pages added for ContinuousExcitationSynthesizer
-  * Signing with a personal key instead of a shared CLAM Team one
+  * Added David García Garzón as Uploader
 
  -- CLAM Team <developers@clam-project.org>  Wed, 18 Mar 2009 02:40:23 +0100
 
