--- a/CLAM/src/Tools/AudioFileIO/AudioFileIO.dox
+++ b/CLAM/src/Tools/AudioFileIO/AudioFileIO.dox
@@ -7,7 +7,7 @@
 You normally don't want to use those classes directly.
 Instead you should use one of the audio file related processings.
 
-@sa MonoAudioFileReader, MonoAudioFileWriter, MultiChannelAudioFileReader MultiChannelAudioFileWriter
+@sa CLAM::MonoAudioFileReader, CLAM::MonoAudioFileWriter, CLAM::MultiChannelAudioFileReader CLAM::MultiChannelAudioFileWriter
 
 */
 
