* PrototypeLoader: Updating the playback status periodically for backend side changes  * PrototypeLoader: Enabling and disabling transport buttons according to playback status  * PrototypeLoader: Holding the transport buttons as members to avoid lookup on the ui each timer shot  * NetworkEditor/MainWindow.hxx: Abstracted a PlaybackIndicator class.

--- a/NetworkEditor/CHANGES
+++ b/NetworkEditor/CHANGES
@@ -5,6 +5,7 @@
  * Configurators: Support for negative floating point numbers
  * Configurators: increased precission from 2 to now 5 decimals
  * .pos files for processing boxes positions deprecated.
+ * Fix: Playback status changes from the backend side are pooled by the indicator
 
 
 2008-08-11 NetworkEditor 1.3.0
