--- a/CLAM/debian/changelog
+++ b/CLAM/debian/changelog
@@ -1,3 +1,10 @@
+clam (1.3.1~svn12860-1ubuntu1) jaunty; urgency=low
+
+  * CLAM/debian/watch: pointed to clam-X.Y.Z instead of CLAM-X.Y.Z
+  * CLAM/debian/watch: debian uupdate parameters added
+
+ -- CLAM Team <developers@clam-project.org>  Thu, 11 Jun 2009 20:55:01 +0200
+
 clam (1.3.1~svn12860-1) unstable; urgency=low
 
   * CLAM/debian/libclam-doc.examples: avoiding duplicate examples/examples dir
