--- a/CLAM/CHANGES
+++ b/CLAM/CHANGES
@@ -2,7 +2,7 @@
 2008-??-?? CLAM 1.3.1 SVN $Revision$
 ''
  * Typed controls: Controls with other type than floats.
- * Regular in controls have callback (deprecates InControlTmpl)
+ * Regular in controls have callback (deprecates InControlTmpl).
  * Networks can pause without stopping the backend.
  * Processing::Get{In,Out}{Control,Port}() overloaded for indexes and names.
  * Processing::GetN{In,Out}{Controls,Ports}() to get the number of connectors.
