--- a/pyclam/INSTALL
+++ b/pyclam/INSTALL
@@ -4,7 +4,7 @@ Note: This is still experimental. By now only tested in linux, but all the tools
 
 === Tools (assuming a working clam dev environment) ===
 # Install Boost.Python. At debian based distros packages named libboost-python-dev and libboost-python1.34.1
-# Download and install[1] Py++ (no package available, at least at standard ubuntu repos)
+# Download and install[1] Py++ (no package available, at least at standard ubuntu repos[2])
   Download Py++-0.9.5.zip from https://sourceforge.net/project/showfiles.php?group_id=118209&package_id=157697
   and execute 'sudo python setup.py install'
 ##* Enable indexing suite version v2:
@@ -12,12 +12,12 @@ Note: This is still experimental. By now only tested in linux, but all the tools
     BOOST_INDEXING='/usr/include/boost/python/suite/indexing'
     sudo cp $PYPLUSPLUS/* $BOOST_INDEXING/
 # (optional [1]) Get gccxml version 0.9 (Warning: standard debian package at repos usually is about 0.7). I took it from here:  http://ftp.zcu.cz/pub/linux/debian/pool/main/g/gccxml/gccxml_0.9.0+cvs20080525-1_i386.deb, the option is compile it from CVS. Note: I experienced some problems with the very last CVS version, the one from 20080525 is preferred.
-# (optional [1]) Download and install pygccxml[1] (no package available, at least at standard ubuntu repos):
+# (optional [1]) Download and install pygccxml[1] (no package available, at least at standard ubuntu repos[2]):
   Download pygccxml-0.9.5.zip from http://sourceforge.net/project/showfiles.php?group_id=118209&package_id=146545
   and execute 'sudo python setup.py install'
 
 [1] Only needed for bindings regeneration. Not for compiling.
-
+[2] Check out this repo https://launchpad.net/~eudoxos/+archive/ppa
 
 === Compilation ===
 # Patch the CLAM library. At the CLAM source dir, execute: 'patch -p0 < pyclam.patch' and re-install the library (run 'scons install' from CLAM dir).
