--- a/trunk/pyjack/CHANGES
+++ b/trunk/pyjack/CHANGES
@@ -1,3 +1,4 @@
 Oct 29th 2009
 
-Commited pyjack-0.1 taken from sourceforge into acustica repository for later modifications
+- Commited pyjack-0.1 taken from sourceforge into acustica repository for later modifications
+- Replaced jack_client_new (deprecated) by jack_client_open in jack_attach
