* pyjack: edited doc

--- a/pyjack/CHANGES
+++ b/pyjack/CHANGES
@@ -1,4 +1,5 @@
-Oct 29th 2009
+CHANGES
 
-- Commited pyjack-0.1 taken from sourceforge into acustica repository for later modifications
+
 - Replaced jack_client_new (deprecated) by jack_client_open in jack_attach
+- Rev 13561 (29 Oct 2009) : Commited pyjack-0.1 taken from sourceforge into acustica repository for later modifications
