Some chordata CHANGES since last clam release

--- a/chordata/CHANGES
+++ b/chordata/CHANGES
@@ -1,3 +1,7 @@
+2010-??-?? chordata 1.?-? SVN $Revision: 12770 $
+ * Jack support as audio backend
+ * Command line options
+
 2009-01-?? chordata 1.0.0 SVN $Revision: 11172 $
 'Embrio release'
  * First working version
