--- a/CLAM/CHANGES
+++ b/CLAM/CHANGES
@@ -1,14 +1,42 @@
-2010-??-?? CLAM 1.4.0 SVN $Revision$
+2010-03-04 CLAM 1.4.0
+'3D moluscs in the space release'
+ * SVN $Revision$
  * Typed controls: Controls with other type than floats.
  * Regular in controls have callback (deprecates InControlTmpl)
+ * Processing type metadata:
+   * Icons
+   * Relations to a token type as sink, source or monitor
+   * Relations to a control type as sink, source, sender or display
+   * Binary (executable or library) where the processing is defined in.
+ * Rich data types: although you can use any C++ data type as data token
+   or control without explicit declaring it, you can add properties, such 
+   as connector color or a display name by defining a ProcessingDataPlugin.
  * Networks can pause without stopping the backend.
  * Processing::Get{In,Out}{Control,Port}() overloaded for indexes and names.
  * Processing::GetN{In,Out}{Controls,Ports}() to get the number of connectors.
  * Processing::Get{In,Out}{Controls,Ports}() are now protected methods.
- * AudioFileIO implementation simplified, API documented
- * FIX: sndfileplayer didn't loop and stopped sending position control.
+ * Audio File:
+   * AudioFileIO implementation simplified, API documented
+   * MonoAudioFileReader supports seeking
+   * Experimental sndfile plugin, suporting seeking and lockfree file reading.
+   * FIX: sndfileplayer didn't loop and stopped sending position control.
+ * clamrefactor.py: a tool that eases batch upgrading many clam networks
+   when you rename a processing, port, control, configuration parameter...
+   also useful to cleanly change configuration parameters directly on the xml.
  * Added 'intel-optimize' option to optimize for intel architectures
  * New MIDIMessage class
+ * Network players have more common code
+ * LadspaNetworkPlayer (former LadspaPlugin):
+   * Now it is a Network Player
+   * Supports variable frame size (avoid clicks in ardour)
+   * When network processings support variable audio size it avoids buffering and copies
+   * ControlSources parameters can be maped to LADSPA hints within LADSPA limitations
+ * Ladspa hosted plugins have a buffer based version (vs, stream, avoiding copies)
+ * examples/Plugins/Lv2PluginExample: New experimental network player for LV2
+ * examples/Plugins/VstPluginExample: Added primitive support for Qt interfaces
+ * Build system: native plugins are now built as regular libraries (with installable
+   headers) plus an empty plugin library that just links against them.
+   This enables having interdependencies, or explicitly use symbols defined in a plugin.
  * plugins/spatialization:
    * Global doxygenation
    * Vbap3D: 3D panning on whatever 3D speaker layout
@@ -17,14 +45,16 @@
    * Hoa2RegularSpeakerArray: Decodes HOA into speaker array
    * RoomImpulseResponseSimulator: Now supports HOA
    * ImpulseResponseComputedOnTheFly -> RoomImpulseResponseSimulatorCommandLine
-   * TODO: Blender and Ardour integration
+   * Blender integration via OSC
    * ChoreoSequencer: Changed the input format
    * LowLatencyConvolution: Fix: Regression on loading IR's smaller than 512 samples
    * RoomImpulseResponseSimulator: SuppressInitialDelay and SeparateDirectSoundAndReverb options
    * BFormatRotation: Fixed formulas
    * CrossCorrelation: Computes the cross-correlation of two audios on spectral domain
  * plugins/filters:
-   * Filter processing: Direct form implementation of the linear, time-invariant difference equation. The same form of the 'filter' function of common numerical computation programs
+   * Filter processing: Direct form implementation of the linear, time-invariant
+     difference equation. The same form of the 'filter' function of common
+     numerical computation programs
    * Adaptative notch filter as an implementation of the steepest descent algorithm
    * Second order fixed notch filter
    * Uniform and Gaussian WhiteNoise generator with mean and standard deviation controls
@@ -33,7 +63,8 @@
    * TimeDelay with a wet/dry control
    * Clipping processing (clips the input signal to -1..1 range or whatever input control says)
    * AudioNormalization processing: Normalizes the input to -1..1 range checking for the max
-   * Resampler plugin variant: Resampler by sample-rate ratio. Iterpolation options. Useful for upsampling and downsampling by factors (x2, etc)
+   * Resampler plugin variant: Resampler by sample-rate ratio. Iterpolation options.
+     Useful for upsampling and downsampling by factors (x2, etc)
 
 2008-08-11 CLAM 1.3.0
 'Shooting flying plugins release'
