--- a/chordata/CHANGES
+++ b/chordata/CHANGES
@@ -1,10 +1,8 @@
-2010-??-?? chordata 1.?-? SVN $Revision$
+2010-03-04 chordata 1.0.0
+'3D moluscs in the space release'
+ * SVN $Revision: 11172$
  * Jack support as audio backend
  * Command line options
-
-2009-01-?? chordata 1.0.0
-'Embrio release'
- * SVN Revision: 11172?
  * First working version
  * Loading song in mp3, ogg, wavs...
  * Offline chord analysis
